docs(page): add aside nav
Add content to the aside nav page

--- a/docs/components/aside-nav.html
+++ b/docs/components/aside-nav.html
@@ -3,3 +3,81 @@ layout: layout
 title: Aside nav
 description: Side menu for displaying things like tags or categories. Contains a header and a list of items.
 ---
+<section class="m-t--full">
+    <h2 class="m-b--full">Example</h2>
+    <h3>Categories list with count</h3>
+    <aside class="asideNav">
+        <h2 class="asideNav-title">Categories</h2>
+        <ol class="asideNav-items">
+            <li class="asideNav-item">
+                <a class="block" href="#">
+                    ASP.NET <span class="asideNav-item-count">17</span>
+                </a>
+            </li>
+            <li class="asideNav-item">
+                <a class="block" href="#">
+                    Visual Studio <span class="asideNav-item-count">12</span>
+                </a>
+            </li>
+            <li class="asideNav-item">
+                <a class="block" href="#">
+                    CSS <span class="asideNav-item-count">8</span>
+                </a>
+            </li>
+            <li class="asideNav-item">
+                <a class="block" href="#">
+                    NDepend <span class="asideNav-item-count">5</span>
+                </a>
+            </li>
+            <li class="asideNav-item">
+                <a class="block" href="#">
+                    WinRT <span class="asideNav-item-count">4</span>
+                </a>
+            </li>
+            <li class="asideNav-item">
+                <a class="block" href="#">
+                    Azure <span class="asideNav-item-count">4</span>
+                </a>
+            </li>
+        </ol>
+    </aside>
+    <div class="sg-example">
+{% highlight html %}
+<aside class="asideNav">
+    <h2 class="asideNav-title">Categories</h2>
+    <ol class="asideNav-items">
+        <li class="asideNav-item">
+            <a class="block" href="#">
+                ASP.NET <span class="asideNav-item-count">17</span>
+            </a>
+        </li>
+        <li class="asideNav-item">
+            <a class="block" href="#">
+                Visual Studio <span class="asideNav-item-count">12</span>
+            </a>
+        </li>
+        <li class="asideNav-item">
+            <a class="block" href="#">
+                CSS <span class="asideNav-item-count">8</span>
+            </a>
+        </li>
+        <li class="asideNav-item">
+            <a class="block" href="#">
+                NDepend <span class="asideNav-item-count">5</span>
+            </a>
+        </li>
+        <li class="asideNav-item">
+            <a class="block" href="#">
+                WinRT <span class="asideNav-item-count">4</span>
+            </a>
+        </li>
+        <li class="asideNav-item">
+            <a class="block" href="#">
+                Azure <span class="asideNav-item-count">4</span>
+            </a>
+        </li>
+    </ol>
+</aside>
+{% endhighlight %}
+    </div>
+</section>
