--- a/src/sass/components/_aside-nav.scss
+++ b/src/sass/components/_aside-nav.scss
@@ -1,10 +1,7 @@
 ﻿//
 // Aside nav component.
-// Side menu for displaying things like tags or categories.
-// Contains a header and a list of items.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/aside-nav
+// -----------------------------------------------------------------------------
 
 .asideNav {
     &-title {
