--- a/src/sass/components/_author.scss
+++ b/src/sass/components/_author.scss
@@ -1,8 +1,7 @@
 ﻿//
 // The author component.
-// --------------------------------------------------
-/// <reference path="../base/_colours.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/author
+// -----------------------------------------------------------------------------
 
 .author {
     color: $marshmallow;
