docs(page): add buttons
Add content to the buttons page

--- a/docs/components/buttons.html
+++ b/docs/components/buttons.html
@@ -1,5 +1,14 @@
 ---
 layout: layout
 title: Buttons
-description: Buttons of all shapes and sizes.
+description: Buttons of all shapes and sizes. Well, just one shape and size.
 ---
+<section class="m-t--full">
+    <h2 class="m-b--full">Example</h2>
+    <a class="btn btn--tag" href="#">Azure web apps</a>
+    <div class="sg-example">
+{% highlight html %}
+<a class="btn btn--tag" href="#">Azure web apps</a>
+{% endhighlight %}
+    </div>
+</section>
