--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,8 +1,7 @@
 ﻿//
 // Buttons component.
-// Buttons of all shapes and sizes.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/buttons
+// -----------------------------------------------------------------------------
 
 $btn-font-size: 1.125 * $base-font-size;
 
