docs(page): add footer
Add content to the footer page

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,9 +1,7 @@
 ﻿//
 // Footer component.
-// The global footer for the site.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/footer
+// -----------------------------------------------------------------------------
 
 .footer {
 	color: $marshmallow;
