docs(page): add header
Add content to the header page

--- a/docs/components/header.html
+++ b/docs/components/header.html
@@ -3,3 +3,43 @@ layout: layout
 title: Header
 description: The global header for the site.
 ---
+
+<section class="m-t--full">
+    <h2 class="m-b--full">Example</h2>
+    <header class="header">
+        <div class="layoutContainer">
+            <h2 class="header-logo">
+                <a href="#">I am Bacon</a>
+            </h2>
+            <p class="visuallyHidden"> Colin Bacon, web developer.</p>
+            <nav class="header-nav">
+                <h3 class="visuallyHidden">Site navigation</h3>
+                <ul class="listInline">
+                    <li class="header-nav-link">
+                        <a href="#">Blog</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="sg-example">
+{% highlight html %}
+<header class="header">
+    <div class="layoutContainer">
+        <h2 class="header-logo">
+            <a href="#">I am Bacon</a>
+        </h2>
+        <p class="visuallyHidden"> Colin Bacon, web developer.</p>
+        <nav class="header-nav">
+            <h3 class="visuallyHidden">Site navigation</h3>
+            <ul class="listInline">
+                <li class="header-nav-link">
+                    <a href="#">Blog</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+{% endhighlight %}
+    </div>
+</section>
