--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,9 +1,7 @@
 ﻿//
 // Header component.
-// The global header for the site.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/header
+// -----------------------------------------------------------------------------
 
 .header {
 	border-bottom: 10px solid $ill-stay-here;
