docs(page): add meter
Add content for the meter page

--- a/docs/components/meter.html
+++ b/docs/components/meter.html
@@ -3,3 +3,21 @@ layout: layout
 title: Meter
 description: HTML fallback for meter tag.
 ---
+
+<section class="m-t--full">
+    <h2 class="m-b--full">Example</h2>
+    <meter value="1">
+        <span class="meter">
+            <span style="width: 70%;" class="meter-gauge">70%</span>
+        </span>
+    </meter>
+    <div class="sg-example">
+        {% highlight html %}
+<meter value="0.7058823529411765">
+    <span class="meter">
+        <span style="width: 70%;" class="meter-gauge">70%</span>
+    </span>
+</meter>
+        {% endhighlight %}
+    </div>
+</section>
