--- a/src/sass/components/_meter.scss
+++ b/src/sass/components/_meter.scss
@@ -1,9 +1,7 @@
 ﻿//
 // Meter component.
-// HTML fallback for meter tag
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/meter
+// -----------------------------------------------------------------------------
 
 .meter {
     display: block;
