docs(page): add page section
Add content to page section page

--- a/docs/components/page-section.html
+++ b/docs/components/page-section.html
@@ -3,3 +3,18 @@ layout: layout
 title: Page section
 description: Defines the spacing for a page section. Includes a section title.
 ---
+
+<section class="m-t--full">
+    <p class="m-b--full">TODO: This does not need to be a component. Rework with utility classes.</p>
+    <h2 class="m-b--full">Example</h2>
+    <div class="pageSection">
+        <h2 class="pageSection-title">Latest posts</h2>
+    </div>
+    <div class="sg-example">
+        {% highlight html %}
+<div class="pageSection">
+    <h2 class="pageSection-title">Latest posts</h2>
+</div>
+        {% endhighlight %}
+    </div>
+</section>
