--- a/src/sass/components/_page-section.scss
+++ b/src/sass/components/_page-section.scss
@@ -1,10 +1,7 @@
 ﻿//
 // Page section component.
-// Defines the spacing for a page section.
-// Includes a section title.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/page-section
+// -----------------------------------------------------------------------------
 
 .pageSection {
     padding-top: $base-line-height;
