docs(page): add page title
Add content for the page title page

--- a/src/sass/components/_page-title.scss
+++ b/src/sass/components/_page-title.scss
@@ -1,9 +1,7 @@
 ﻿//
 // Page title component.
-// Used to style the title of each page.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_base.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/page-title
+// -----------------------------------------------------------------------------
 
 .pageTitle {
 	background-color: $cursive;
