--- a/docs/components/page-title.html
+++ b/docs/components/page-title.html
@@ -3,3 +3,21 @@ layout: layout
 title: Page title
 description: Used to style the title of each page.
 ---
+
+<section class="m-t--full">
+    <h2 class="m-b--full">Example</h2>
+    <div class="pageTitle">
+        <div class="has-triangle">
+            <h1 class="pageTitle-headline pageTitle-headline--sm">Recent posts for Category 'ASP.NET'</h1>
+        </div>
+    </div>
+    <div class="sg-example m-t--full">
+        {% highlight html %}
+<div class="pageTitle">
+    <div class="has-triangle">
+        <h1 class="pageTitle-headline pageTitle-headline--sm">Recent posts for Category 'ASP.NET'</h1>
+    </div>
+</div>
+        {% endhighlight %}
+    </div>
+</section>
