docs(page): add tag
Add content to the tag page

--- a/docs/components/tag.html
+++ b/docs/components/tag.html
@@ -3,3 +3,13 @@ layout: layout
 title: Tag
 description: Component representing an article category label or tag.
 ---
+
+<section class="m-t--full">
+    <h2 class="m-b--full">Example</h2>    
+    <a href="#" class="c-tag c-tag--category">ASP.NET</a>
+    <div class="sg-example">
+        {% highlight html %}
+<a href="#" class="c-tag c-tag--category">ASP.NET</a>
+        {% endhighlight %}
+    </div>
+</section>
