--- a/src/sass/components/_tag.scss
+++ b/src/sass/components/_tag.scss
@@ -1,8 +1,8 @@
 ﻿//
 // Tag component.
-// Component representing an article category label or tag.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/components/tag
+// -----------------------------------------------------------------------------
+
 .c-tag {
     background-color: $very-light-grey;
     color: $ill-stay-here;
