docs(page): add lists
Add content to the lists page

--- a/src/sass/objects/_lists.scss
+++ b/src/sass/objects/_lists.scss
@@ -1,8 +1,8 @@
 ﻿//
 // List objects.
-// --------------------------------------------------
+// Documentation url: https://iambacon.co.uk/styleguide/objects/lists
+// -----------------------------------------------------------------------------
 
-// Inline list using inline-block
 .listInline {
     > li {
         display: inline-block;
