--- a/src/sass/utilities/_colours.scss
+++ b/src/sass/utilities/_colours.scss
@@ -1,7 +1,7 @@
 ﻿//
 // Helper classes for colours.
-// --------------------------------------------------
-/// <reference path="../base/_colours.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/utilities/colours
+// -----------------------------------------------------------------------------
 
 .takeYourDesire {
 	background-color: $take-your-desire;
