docs(page): add display
Add content to the display page

--- a/src/sass/utilities/_display.scss
+++ b/src/sass/utilities/_display.scss
@@ -1,6 +1,7 @@
 ﻿//
 // Display helper classes.
-// --------------------------------------------------
+// Documentation url: https://iambacon.co.uk/styleguide/utilities/display
+// -----------------------------------------------------------------------------
 
 .block {
     display: block;
