--- a/src/sass/utilities/_grid.scss
+++ b/src/sass/utilities/_grid.scss
@@ -1,8 +1,7 @@
 ﻿//
 // Helper classes for grids and layouts.
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
-/// <reference path="../base/mixins/_grid.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/utilities/grid
+// -----------------------------------------------------------------------------
 
 .layoutContainer {
 	max-width: 1000px;
@@ -11,6 +10,10 @@
 	padding-left: $base-line-height * 0.5;
 	padding-right: $base-line-height * 0.5;
     box-sizing: border-box;
+
+    &--visible {
+        overflow: visible;
+    }
 }
 
 .articleLayoutContainer {
@@ -18,10 +21,6 @@
         @include push;
         @include pull;
     }
-}
-
-.layoutContainer--visible {
-	overflow: visible;
 }
 
 // Helper class for a grid container.
