refactor(ui): move page header
Move page header to the side navigation

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,5 +1,6 @@
 {% if navigation %}
 <nav class="sg-layout-nav">
+    {% include header.html %}
     {% for section in navigation.sections %}
     <h3>{{ section.title }}</h3>
     <ul>
