--- a/src/sass/base/_grid.scss
+++ b/src/sass/base/_grid.scss
@@ -1,10 +1,7 @@
 ﻿//
 // Grid variables.
-// --------------------------------------------------
-/// <reference path="_variables.scss" />
-
-// Extra small devices (less than 768px) 
-// are the default styles.
+// Documentation url: https://iambacon.co.uk/styleguide/utilities/grid
+// -----------------------------------------------------------------------------
 
 $screen-sm-min: 768px;  // tablets
 $screen-md-min: 992px;  // desktops
