--- a/src/sass/base/_grid.scss
+++ b/src/sass/base/_grid.scss
@@ -1,6 +1,6 @@
 ﻿//
 // Grid variables.
-// Documentation url: https://iambacon.co.uk/styleguide/utilities/grid
+// Documentation url: https://iambacon.co.uk/styleguide/base/grid
 // -----------------------------------------------------------------------------
 
 $screen-sm-min: 768px;  // tablets
