--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,7 +1,7 @@
 ﻿//
 // Typography variables.
-// --------------------------------------------------
-/// <reference path="_variables.scss" />
+// Documentation url: https://iambacon.co.uk/styleguide/base/typography
+// -----------------------------------------------------------------------------
 
 // The base font size.
 $base-font-size: 16px;
