feat(fav): add fav icon
Add fav icon to the site

--- a/docs/_includes/layout.html
+++ b/docs/_includes/layout.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - I am Bacon styleguide</title>
+    {% include fav.html %}
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/styleguide.css">
     <link rel="stylesheet" href="/assets/css/prism.css">
 </head>
 
-<body>    
+<body>
     <a href="#maincontent" class="visuallyHidden">Skip to main content</a>
     {% include navigation.html %}
     <main id="#maincontent" class="sg-layout-main">
