refactor(ui): add logo
Add logo to the page header

--- a/docs/assets/sass/styleguide.scss
+++ b/docs/assets/sass/styleguide.scss
@@ -93,3 +93,12 @@
         white-space: nowrap;
     }
 }
+
+.sg-logo {
+    background-image: url(../images/square-pig.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 130px;
+    width: 100%;
+}
