--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,3 +1,3 @@
 <header>
-    <a href="/">I am Bacon style guide</a>
+    <a href="/" class="hideText sg-logo">I am Bacon style guide</a>
 </header>
