--- a/src/sass/utilities/_social.scss
+++ b/src/sass/utilities/_social.scss
@@ -4,7 +4,7 @@
 // -----------------------------------------------------------------------------
 
 .social {
-    background-image: url(../../../images/social.png);
+    background-image: url(../images/social.png);
     background-repeat: no-repeat;
     height: 32px;
     width: 32px;
