refactor(html): add meta description
Add a common meta description for all pages

--- a/docs/_includes/layout.html
+++ b/docs/_includes/layout.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - I am Bacon style guide</title>
+    <meta name="description" content="A style guide for iambacon website. It provides examples for all components and utilities 
+        plus it outlines design principles such as colour, spacing and fonts.">
     {% include fav.html %}
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/styleguide.css">
