feat(component): add full width button
Add modifier to button component to let the button take up the full width of its parent

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -27,4 +27,9 @@ $btn-font-size: 1.125 * $base-font-size;
             color: $marshmallow;
         }
     }
+
+    &--full { // modifier full width
+        display: block;
+        text-align: center;
+    }
 }
