--- a/docs/components/buttons.html
+++ b/docs/components/buttons.html
@@ -4,11 +4,19 @@ title: Buttons
 description: Buttons of all shapes and sizes. Well, just one shape and size.
 ---
 <section class="m-t--full">
-    <h2 class="m-b--full">Example</h2>
+    <h2 class="m-b--full">Examples</h2>
+    <h3>Tag button</h3>
     <a class="btn btn--tag" href="#">Azure web apps</a>
     <div class="sg-example">
-{% highlight html %}
-<a class="btn btn--tag" href="#">Azure web apps</a>
-{% endhighlight %}
+        {% highlight html %}
+        <a class="btn btn--tag" href="#">Azure web apps</a>
+        {% endhighlight %}
+    </div>
+    <h3>Full width tag button</h3>
+    <a class="btn btn--tag btn--full" href="#">Azure web apps</a>
+    <div class="sg-example">
+        {% highlight html %}
+        <a class="btn btn--tag btn--full" href="#">Azure web apps</a>
+        {% endhighlight %}
     </div>
 </section>
