--- a/src/sass/objects/_lists.scss
+++ b/src/sass/objects/_lists.scss
@@ -8,3 +8,23 @@
         display: inline-block;
     }
 }
+
+.listBullet {    
+    margin-left: 25px;
+
+    > li {
+        position: relative;
+
+        &:before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            right: 100%;
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            background-color: $cursive;
+            margin-right: 13px;
+        }
+    }    
+}
