docs(page): add guidelines
Add guidelines for Styles, the pattern library for iambacon websites

--- a/docs/_includes/layout.html
+++ b/docs/_includes/layout.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }} - I am Bacon style guide</title>
-    <meta name="description" content="A style guide for iambacon website. It provides examples for all components and utilities 
+    <title>{{ title }} - I am Bacon pattern library</title>
+    <meta name="description" content="Styles, a pattern library for iambacon websites. It provides examples for all components and utilities 
         plus it outlines design principles such as colour, spacing and fonts.">
     {% include fav.html %}
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -17,7 +17,7 @@
     <a href="#maincontent" class="visuallyHidden">Skip to main content</a>
     {% include navigation.html %}
     <main id="#maincontent" class="sg-layout-main">
-        <h1>{{ title }}</h1>
+        <h1 class="h1">{{ title }}</h1>
         <p>{{ description }}</p>
         {{ content }}
     </main>
