--- a/src/sass/utilities/_typography.scss
+++ b/src/sass/utilities/_typography.scss
@@ -45,6 +45,7 @@
 // Sets text decoration for text links.
 .link {
     text-decoration: underline;
+    color: $cursive;
 }
 
 // Set behaviour for title links.
