--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,8 +5,11 @@
 
 // Base
 // ------------------------
-@import "base/base", 
-		"base/code";
+@import "base/variables";
+@import "base/mixins/base";
+@import "base/functions/functions";
+@import "base/ground-zero";
+@import "base/code";
 
 // Objects
 // ------------------------
