--- a/src/sass/utilities/_spacing.scss
+++ b/src/sass/utilities/_spacing.scss
@@ -1,15 +1,15 @@
 ﻿//
-// Margin helper classes.
-// Based on line height for vertical rythym
-// --------------------------------------------------
-/// <reference path="../base/_variables.scss" />
+// Margin & padding helper classes.
+// Documentation url: https://styles.iambacon.co.uk/utilities/spacing
+// -----------------------------------------------------------------------------
+
 .m-r {
     &--full {
         margin-right: vr-space(1);
     }
 
     &--half {
-        margin-right: vr-space(.5);
+        margin-right: vr-space(0.5);
     }
 }
 
@@ -25,8 +25,8 @@
 
 .m-br {
     &--quarter {
-        margin-bottom: vr-space(.25);
-        margin-right: vr-space(.25);
+        margin-bottom: vr-space(0.25);
+        margin-right: vr-space(0.25);
     }
 }
 
@@ -39,6 +39,16 @@
     margin-bottom: vr-space(1);
 }
 
-.p-t--half {
-    padding-top: vr-space(.5);
+.p-t {
+    &--half {
+        padding-top: vr-space(0.5);
+    }
+
+    &--full {
+        padding-top: vr-space(1);
+    }
+}
+
+.p-b--3 {
+    padding-bottom: vr-space(3);
 }
