refactor(component): add o- prefix to object classes
Add o- prefix to object classes, update coding guidelines docs and usages

BREAKING CHANGE: css name change

--- a/docs/components/author.html
+++ b/docs/components/author.html
@@ -15,7 +15,7 @@ description: Component representing the author of an article. Contains an image,
                 compelling frontend experiences with HTML and CSS. In his free time he can be found teaching skiing at his
                 local slope.</p>
             <div class="author-links">
-                <ul class="listInline m-b--full">
+                <ul class="o-listInline m-b--full">
                     <li>
                         <a class="social linkedIn hideText m-r--full" rel="me" title="Connect with Colin Bacon on LinkedIn"
                             href="#">LinkedIn</a>
@@ -40,7 +40,7 @@ description: Component representing the author of an article. Contains an image,
             compelling frontend experiences with HTML and CSS. In his free time he can be found teaching skiing at his
             local slope.</p>
         <div class="author-links">
-            <ul class="listInline m-b--full">
+            <ul class="o-listInline m-b--full">
                 <li>
                     <a class="social linkedIn hideText m-r--full" rel="me" title="Connect with Colin Bacon on LinkedIn"
                         href="#">LinkedIn</a>
