--- a/docs/components/footer.html
+++ b/docs/components/footer.html
@@ -48,7 +48,7 @@ description: The global footer for the site.
                 </div>
                 <div class="linksList-items linksList-items--social">
                     <h3 class="h3">Let's be social</h3>
-                    <ul class="listInline m-b--full">
+                    <ul class="o-listInline m-b--full">
                         <li>
                             <a class="social linkedIn hideText m-r--full" rel="me"
                                 title="Connect with Colin Bacon on LinkedIn"
@@ -108,7 +108,7 @@ description: The global footer for the site.
             </div>
             <div class="linksList-items linksList-items--social">
                 <h3 class="h3">Let's be social</h3>
-                <ul class="listInline m-b--full">
+                <ul class="o-listInline m-b--full">
                     <li>
                         <a class="social linkedIn hideText m-r--full" rel="me"
                             title="Connect with Colin Bacon on LinkedIn"
