--- a/docs/components/header.html
+++ b/docs/components/header.html
@@ -14,7 +14,7 @@ description: The global header for the site.
             <p class="visuallyHidden"> Colin Bacon, web developer.</p>
             <nav class="header-nav">
                 <h3 class="visuallyHidden">Site navigation</h3>
-                <ul class="listInline">
+                <ul class="o-listInline">
                     <li class="header-nav-link">
                         <a href="#">Blog</a>
                     </li>
@@ -32,7 +32,7 @@ description: The global header for the site.
         <p class="visuallyHidden"> Colin Bacon, web developer.</p>
         <nav class="header-nav">
             <h3 class="visuallyHidden">Site navigation</h3>
-            <ul class="listInline">
+            <ul class="o-listInline">
                 <li class="header-nav-link">
                     <a href="#">Blog</a>
                 </li>
