--- a/docs/components/links-list.html
+++ b/docs/components/links-list.html
@@ -48,7 +48,7 @@ description: A responsive list of site links used in the site footer.
                 </div>
                 <div class="linksList-items linksList-items--social">
                     <h3 class="h3">Let's be social</h3>
-                    <ul class="listInline m-b--full">
+                    <ul class="o-listInline m-b--full">
                         <li>
                             <a class="social linkedIn hideText m-r--full" rel="me"
                                 title="Connect with Colin Bacon on LinkedIn" href="#">LinkedIn</a>
@@ -105,7 +105,7 @@ description: A responsive list of site links used in the site footer.
             </div>
             <div class="linksList-items linksList-items--social">
                 <h3 class="h3">Let's be social</h3>
-                <ul class="listInline m-b--full">
+                <ul class="o-listInline m-b--full">
                     <li>
                         <a class="social linkedIn hideText m-r--full" rel="me"
                             title="Connect with Colin Bacon on LinkedIn" href="#">LinkedIn</a>
