style(prettier): setup prettier configuration
Add prettier package and setup project configuration

--- a/src/sass/base/mixins/_base.scss
+++ b/src/sass/base/mixins/_base.scss
@@ -2,6 +2,7 @@
 // Base
 // Imports all mixins.
 // --------------------------------------------------
+/* prettier-ignore */
 @import
     "clearfix",
     "breakpoints",
